--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
 body {
-  font-family: system-ui, sans-serif;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 * {
@@ -31,17 +32,11 @@ nav a:hover {
   color: rgb(66, 50, 122);
 }
 
-.sidebar {
-  padding: 10px;
-  height: 500px;
-  float: left;
-  width: 30%;
+main {
+  display: flex;
 }
-
 .post {
-  padding: 20px;
-  float: left;
-  width: 60%;
+  padding: 1rem;
 }
 
 h1,
@@ -57,16 +52,6 @@ li {
 .post p {
   font-size: larger;
   font-family: Georgia, serif;
-}
-
-.comments {
-  margin-top: 40px;
-}
-
-.comment {
-  border: 2px solid #aaa;
-  border-radius: 4px;
-  padding: 20px;
 }
 
 /* https://codepen.io/mandelid/pen/vwKoe */
