--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,18 @@ nav a:hover {
 main {
   display: flex;
 }
+
+.sideBar {
+  background-color: #f5f5f5;
+  overflow-x: hidden;
+  padding: 20px;
+  border-radius: 0.5rem;
+  border: 1px solid #ccc;
+  float: left;
+  margin-top: 1rem;
+  overflow-y: auto;
+}
+
 .post {
   padding: 1rem;
 }
